# slam_trick

./: .gitignore  .gitignore.swp  README.md
icp/: CMakeLists.txt  README.md
icp/.cache/clangd/index/: icp.cpp.A5438B33BCBDE427.idx  icp.h.7E4BB61A1121981F.idx  main.cpp.304E1FBB640D04AA.idx
icp/include/: icp.h
icp/src/: icp.cpp  icp_bt.cpp  main.cpp
lidar_feature_extractor/: CMakeLists.txt
lidar_feature_extractor/include/: feature_extractor.hpp
lidar_feature_extractor/src/: feature_extractor.cpp  main.cpp  ptr  sharedptr.cpp  struct.cpp
ndt/: CMakeLists.txt  ndt_calculation.cpp  ndt_registration.cpp
sorting_alg/: CMakeLists.txt  MODULE.bazel  bazel-bin  bazel-out  bazel-sorting_alg  bazel-testlogs
sorting_alg/include/: BUILD  sort.hpp
sorting_alg/src/: BUILD  main.cpp  sort.cpp
